<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Pumps" Id="{b60d23cc-22cb-47c4-b8e1-68c95529d503}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL

    (* Leybold Pumps *)
    {attribute 'pytmc' :=' pv: CRIXS:TC:PTM:02 '}
    {attribute 'TcLinkTo' := 	'.i_xAtSpd	 :=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E42 (EL1004)^Channel 2^Input;
                                 .i_xFaultNC :=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E42 (EL1004)^Channel 1^Input;
                                 .q_RunDO	 :=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E43 (EL2794)^Channel 3^Output'}
    TC_PTM_02 : FB_PTM_TurboDrive;

    stTC_PTM_02 : ST_LeyboldPTM;

    {attribute 'pytmc' :=' pv: CRIXS:TC:PTM:01 '}
    {attribute 'TcLinkTo' := 	'.i_xAtSpd	 :=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E42 (EL1004)^Channel 4^Input;
                                 .i_xFaultNC :=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E42 (EL1004)^Channel 3^Input;
                                 .q_RunDO	 :=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E43 (EL2794)^Channel 4^Output'}
    TC_PTM_01 : FB_PTM_TurboDrive;

    stTC_PTM_01 : ST_LeyboldPTM;


    (* Pfeiffer Turbo Pumps TC400 *)
    {attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E46 (EL1004)^Channel 1^Input;
                                 .i_xRemote			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E46 (EL1004)^Channel 2^Input;
                                 .i_xFaultNC		:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E46 (EL1004)^Channel 3^Input;
                                 .q_RunDO			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E47 (EL2004)^Channel 1^Output;
                                 .q_xRemote			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E47 (EL2004)^Channel 2^Output;
                                 .q_PumpingStation	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E47 (EL2004)^Channel 3^Output
    '}
    {attribute 'pytmc' := '
        pv: CRIXS:TC:PTM:03
        io: io
    '}
    TC_PTM_03 : FB_PTM_Pfeiffer;

    stTC_PTM_03 : ST_PfeifferPTM;

    stTC_PTM_03_Pfeiffer_CTRL 	: ARRAY[1..20] OF ST_PfeifferControl;
    stTC_PTM_03_Pfeiffer_RBK 	: ARRAY[1..20] OF ST_PfeifferStatus;

    fbTC_PTM_03_PfeifferCom : FB_PFEIFFER_COM;



    (* Pfeiffer Turbo Pumps TC400 *)

    {attribute 'TcLinkTo' := 	'.i_xAtSpd			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E49 (EL1004)^Channel 1^Input;
                                 .i_xRemote			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E49 (EL1004)^Channel 2^Input;
                                 .i_xFaultNC		:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E49 (EL1004)^Channel 3^Input;
                                 .q_RunDO			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E50 (EL2004)^Channel 1^Output;
                                 .q_xRemote			:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E50 (EL2004)^Channel 2^Output;
                                 .q_PumpingStation	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 2 (EK1122)^Hoffman Box Vac EK1 (EK1100)^E50 (EL2004)^Channel 3^Output
    '}

    {attribute 'pytmc' := '
        pv: CRIXS:SDS:PTM:01
        io: io
    '}
    SDS_PTM_01 : FB_PTM_Pfeiffer;

    stSDS_PTM_01 : ST_PfeifferPTM;  //new

    // Serial port
    stSDS_PTM_01_Pfeiffer_CTRL 	: ARRAY[1..20] OF ST_PfeifferControl;
    stSDS_PTM_01_Pfeiffer_RBK 	: ARRAY[1..20] OF ST_PfeifferStatus;

    fb_SDS_PTM_01_Pfeiffer_PfeifferCom : FB_PFEIFFER_COM;

    (* Pfeiffer Turbo Pumps TC110 *)
    // SVLS

    {attribute 'pytmc' := ' pv: CRIX:SVLS:PTM:01'}
    {attribute 'TcLinkTo' := 	'.i_xAtSpd		      := TIIB[SVLS_PR01 E2 (EL1004)]^Channel 1^Input;
                               .i_xFaultNC		  := TIIB[SVLS_PR01 E2 (EL1004)]^Channel 2^Input;
                               .q_RunDO           := TIIB[SVLS_PR01 E3 (EL2794)]^Channel 1^Output;
                               .q_xReset          := TIIB[SVLS_PR01 E3 (EL2794)]^Channel 2^Output
    '}
    CRIX_SVLS_PTM_01 : FB_PTM_Pfeiffer;
    stCRIX_SVLS_PTM_01 : ST_PfeifferPTM;

    // Serial port
    stCRIX_SVLS_PTM_01_Pfeiffer_CTRL 	: ARRAY[1..20] OF ST_PfeifferControl;
    stCRIX_SVLS_PTM_01_Pfeiffer_RBK 	: ARRAY[1..20] OF ST_PfeifferStatus;

    fb_CRIX_SVLS_PTM_01_PfeifferCom : FB_PFEIFFER_COM;

    // SIP PIP NexTORR Pumps
    {attribute 'pytmc' := ' pv: CRIX:SVLS:PIP:1 '}
    {attribute 'TcLinkTo' := 	'.i_iPRESS		:=	TIIB[SVLS_PR01 E9 (EL3174-0002)]^AI Standard Channel 1^Value;
                                 .i_xIP_ON		:= 	TIIB[SVLS_PR01 E11 (EL1124)]^Channel 1^Input;
                                 .i_xError      :=  TIIB[SVLS_PR01 E11 (EL1124)]^Channel 2^Input;
                                 .q_xHVEna_DO	:= 	TIIB[SVLS_PR01 E3 (EL2794)]^Channel 3^Output
    '}
    CRIX_SVLS_PIP_1 : FB_PIP_SIP;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>