<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_Chamber_Gauges" Id="{cf1bb2d6-ee0f-41b1-a857-33af2cd32803}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Chamber_Gauges
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
TC_GPI_01.M_SetBits(30518);
TC_GPI_01(PG=>stTC_GPI_01);

CRYO_GPI_01.M_SetBits(30518);
CRYO_GPI_01(PG=>stCRYO_GPI_01);

ROUGH_GPI_01.M_SetBits(30518);
ROUGH_GPI_01(PG=>stROUGH_GPI_01);

TC_GCC_01.M_SetBits(30518);
TC_GCC_01(PG:=TC_GPI_01.PG,
            IG=>stTC_GCC_01);


CRYO_GCP_02.M_SetBits(30518);
CRYO_GCP_02(PG=>stCRYO_GCP_02);

CRYO_GCP_01.M_SetBits(30518);
CRYO_GCP_01(PG=>stCRYO_GCP_01);


SDS_GCP_01.M_SetBits(30518);
SDS_GCP_01(PG=>);

TC_GCP_01.M_SetBits(30518);
TC_GCP_01(PG=>stTC_GCP_01);

CRIX_SVLS_GCP_01.M_SetBits(30518);
CRIX_SVLS_GCP_01(PG=>stCRIX_SVLS_GCP_01);

CRIX_SVLS_GCP_02.M_SetBits(30518);
CRIX_SVLS_GCP_02(PG=>stCRIX_SVLS_GCP_02);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>