<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_Chamber_Pumps" Id="{b20a9b3c-f30a-4f50-a45e-7b0eccd66336}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Chamber_Pumps
VAR

    fbTC_PTM_01_ILK : FB_ChemRIXS_Turbo_ILK;
    TC_PTM_01_ILK_OK : BOOL;

    fbTC_PTM_02_ILK : FB_ChemRIXS_Turbo_ILK;
    TC_PTM_02_ILK_OK : BOOL;

    fbTC_PTM_03_ILK : FB_ChemRIXS_Turbo_ILK;
    TC_PTM_03_ILK_OK : BOOL;

    fbSDS_PTM_01_ILK : FB_ChemRIXS_Turbo_ILK; //new
    SDS_PTM_01_ILK_OK : BOOL;

    fbCRIX_SVLS_PTM_01_ILK: FB_ChemRIXS_Turbo_ILK;
    CRIX_SVLS_PTM_01_xExtIlkOK: BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Leybold Pumps
fbTC_PTM_01_ILK(i_stValve:=stTC_VRC_01,
                  i_stPump:=stTC_PTM_01,
                  tDelay:=T#200S,
                  bILK=>TC_PTM_01_ILK_OK);
TC_PTM_01(i_xExtILKOk:=(TC_PTM_01_ILK_OK AND F_TurboExtILKLogic_2(Turbo:=stTC_PTM_01,
                                                                     BackingGauge:=ROUGH_GPI_01.PG,
                                                                     InletGauge:=TC_GPI_01.PG,
                                                                     ScrollPump:= stMECH_PRO_01)),
            iq_stPtm=> stTC_PTM_01);

fbTC_PTM_02_ILK(i_stValve:=stTC_VRC_02,
                  i_stPump:=stTC_PTM_02,
                  tDelay:=T#200S,
                  bILK=>TC_PTM_02_ILK_OK);
TC_PTM_02(i_xExtILKOk:=(TC_PTM_02_ILK_OK AND F_TurboExtILKLogic_2(Turbo:=stTC_PTM_02,
                                                                     BackingGauge:=ROUGH_GPI_01.PG,
                                                                     InletGauge:=TC_GPI_01.PG,
                                                                     ScrollPump:= stMECH_PRO_01)),
            iq_stPtm=> stTC_PTM_02);

// Pfeiffer Pumps
fbTC_PTM_03_ILK(i_stValve:=stTC_VRC_03,
                  i_stPump:=stTC_PTM_03,
                  tDelay:=T#200S,
                  bILK=>TC_PTM_03_ILK_OK);
TC_PTM_03(i_xExtILKOk:=(TC_PTM_03_ILK_OK  AND F_TurboExtILKLogic_2(Turbo:=stTC_PTM_03,
                                                                     BackingGauge:=ROUGH_GPI_01.PG,
                                                                     InletGauge:=TC_GPI_01.PG,
                                                                     ScrollPump:= stMECH_PRO_01)),
            iq_stPtm=> stTC_PTM_03);

stTC_PTM_03_Pfeiffer_CTRL[1].iSerialAddress := 0;
stTC_PTM_03_Pfeiffer_CTRL[1].xEnableComm := TRUE;

fbTC_PTM_03_PfeifferCom(astPfeifferControl:=stTC_PTM_03_Pfeiffer_CTRL,
                      astPfeifferStatus:=stTC_PTM_03_Pfeiffer_RBK,
                      SerialRXBuffer:=K2S17_E5_CH2_SerialRXBuffer,
                      SerialTXBuffer:=K2S17_E5_CH2_SerialTXBuffer);

TC_PTM_03.M_Serial_IO(st_Pfeiffer_RBK:=stTC_PTM_03_Pfeiffer_RBK[1], stTC_PTM_03_Pfeiffer_CTRL[1]);



// SDS-PTM-01 vent package interlock;  iF SDS_VRC-02 is closed SDS-PTM-01 stays ON.
IF SDS_VRC_02.M_IsClosed() THEN
    SDS_PTM_01_ILK_OK:= TRUE;
ELSE
    // Pfeiffer Turbo pump 04 (New) SDS
    fbSDS_PTM_01_ILK(i_stValve:=stSDS_VRC_01,
                  i_stPump:=stSDS_PTM_01,
                  tDelay:=T#200S,
                  bILK=>SDS_PTM_01_ILK_OK);

    SDS_PTM_01_ILK_OK := SDS_PTM_01_ILK_OK AND F_TurboExtILKLogic_2(Turbo:=stSDS_PTM_01,
                                                                     BackingGauge:=ROUGH_GPI_01.PG,
                                                                     InletGauge:=SDS_GCP_01.PG,
                                                                     ScrollPump:= stMECH_PRO_01);
END_IF

SDS_PTM_01(i_xExtILKOk:=SDS_PTM_01_ILK_OK, iq_stPtm=> stSDS_PTM_01);

stSDS_PTM_01_Pfeiffer_CTRL[1].iSerialAddress := 1;
stSDS_PTM_01_Pfeiffer_CTRL[1].xEnableComm := TRUE;

fb_SDS_PTM_01_Pfeiffer_PfeifferCom(astPfeifferControl:=stSDS_PTM_01_Pfeiffer_CTRL,
                      astPfeifferStatus:=stSDS_PTM_01_Pfeiffer_RBK,
                      SerialRXBuffer:=K2S17_E5_CH1_SerialRXBuffer,
                      SerialTXBuffer:=K2S17_E5_CH1_SerialTXBuffer);

SDS_PTM_01.M_Serial_IO(st_Pfeiffer_RBK:=stSDS_PTM_01_Pfeiffer_RBK[1], stSDS_PTM_01_Pfeiffer_CTRL[1]);

//Pfeiffer Turbo PTM_04 (Old Implementation of timer using Library (2.0.1) function)

(*(*Assign adresses to the pfeiffer controllers connected to this serial terminal*)
stCRIX_PTM_04_Pfeiffer_CTRL[1].iSerialAddress :=1;
stCRIX_PTM_04_Pfeiffer_CTRL[1].xEnableComm := TRUE;

(* Instanitate the Function block for serial communication with Pfeiffer*)
fb_CRIX_PTM_04_Pfeiffer_PfeifferCom(astPfeifferControl := stCRIX_PTM_04_Pfeiffer_CTRL,
               astPfeifferStatus:= stCRIX_PTM_04_Pfeiffer_RBK,
                SerialRXBuffer:= K2S17_E5_CH1_SerialRXBuffer,
                SerialTXBuffer:= K2S17_E5_CH1_SerialTXBuffer);


(* Copy Status Pv's into the PTM structure*)
CRIX_PTM_04.M_Serial_IO(st_Pfeiffer_CTRL:=stCRIX_PTM_04_Pfeiffer_CTRL[1],st_Pfeiffer_RBK:=stCRIX_PTM_04_Pfeiffer_RBK[1]);

(*
Turbo pump permit to run when:
Scroll pump is running
Turbo pump inlet pressure and backing line pressure are below than configured setpoints
Roughing valve is open.  When roughing valve closed, start a delay timer to stop turbo after a configured time interval.
*)


CRIX_PTM_04_ILK_OK := F_TurboExtILK_TOF(Turbo:=CRIX_PTM_04.iq_stPTM, BackingGauge:=CRIX_GPI_05.PG,
                            InletGauge:=CRIX_GCP_03.PG, ScrollPump:= stCRIX_MECH_PRO_01, RoughingValve:=CRIX_VGC_06.iq_stValve, tDelay:=T#200S );

CRIX_PTM_04(i_xExtILKOk:=CRIX_PTM_04_ILK_OK, iq_stPtm=> ); *)

// Pfeiffer Turbo Pump TC110
fbCRIX_SVLS_PTM_01_ILK(i_stValve:=stCRIX_SVLS_VRC_01,
                  i_stPump:=stCRIX_SVLS_PTM_01,
                  tDelay:=T#200S,
                  bILK=>CRIX_SVLS_PTM_01_xExtIlkOK);

CRIX_SVLS_PTM_01(i_xExtILKOk:=(CRIX_SVLS_PTM_01_xExtIlkOK and F_TurboExtILKLogic_2(Turbo:=stCRIX_SVLS_PTM_01,
                                                                     BackingGauge:=ROUGH_GPI_01.PG,
                                                                     InletGauge:=CRIX_SVLS_GCP_01.PG,
                                                                     ScrollPump:= stMECH_PRO_01)),
            iq_stPtm=> stCRIX_SVLS_PTM_01);

stCRIX_SVLS_PTM_01_Pfeiffer_CTRL[1].iSerialAddress := 1;
stCRIX_SVLS_PTM_01_Pfeiffer_CTRL[1].xEnableComm := TRUE;

fb_CRIX_SVLS_PTM_01_PfeifferCom(astPfeifferControl:=stCRIX_SVLS_PTM_01_Pfeiffer_CTRL,
                      astPfeifferStatus:=stCRIX_SVLS_PTM_01_Pfeiffer_RBK,
                      SerialRXBuffer:=CRIX_SVLS_SerialRXBuffer,
                      SerialTXBuffer:=CRIX_SVLS_SerialTXBuffer);

CRIX_SVLS_PTM_01.M_Serial_IO(st_Pfeiffer_RBK:=stCRIX_SVLS_PTM_01_Pfeiffer_RBK[1], stCRIX_SVLS_PTM_01_Pfeiffer_CTRL[1]);

// SIP NexTORR Ion Pump
CRIX_SVLS_PIP_1(i_stGauge := CRIX_SVLS_GCP_02.PG, i_xOverrideMode := xSystemOverride_ChemRIXS);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>